--- a/package.json
+++ b/package.json
@@ -11,10 +11,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
     "esm": "^3.2.25",
+    "form-data": "^4.0.0",
+    "fs": "0.0.1-security",
+    "moment": "^2.29.1",
     "node": "^16.5.0",
+    "node-fetch": "^2.6.1",
     "node-telegram-bot-api": "^0.53.0",
     "nodemon": "^2.0.12",
+    "path": "^0.12.7",
+    "pg": "^8.6.0",
+    "sequelize": "^6.6.5",
     "yandex-disk": "0.0.8"
   }
 }
